# parse-ntsecdesc

./: LICENSE  README.md  pyproject.toml
parse_ntsecdesc/: __main__.py
parse_ntsecdesc/helpers/: sddl.py  structs.py
